# c-compiler

./: CMakeLists.txt  README  README.md
src/: main.cpp
src/codegen/: code_generator.cpp  code_generator.hpp  register.hpp  x86_instructions.hpp
src/compiler/: compiler.cpp  compiler.hpp
src/flow_graph/: flow_graph.hpp
src/ir/: ir.h  ir_generator.cpp  ir_generator.h  ir_printer.h
src/lexer/: lexer.cpp  lexer.h  token.h
src/optimizations/: optimizer.hpp
src/optimizations/passes/: constant_folding.cpp  constant_folding.hpp  copy_propagation.cpp  copy_propagation.hpp  unreachable_code_elem.cpp  unreachable_code_elem.hpp
src/parser/: ast.h  parser.cpp  parser.h
src/scope/: resolver.hpp
src/util/: files.h
tests/: source.ll  test.c
